# codecluster

./: .gitignore  .prettierignore  Cargo.toml  README.md  README_zh.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
.github/: dependabot.yaml
.github/workflows/: review.yaml
.husky/: post-checkout  pre-commit  pre-push
.storybook/: decorator.scss  main.ts  preview.ts
app/: Cargo.toml  common.scss  index.html  main.ts  main.vue  tauri.conf.json  themes.scss
app/components/: Placeholder.stories.tsx  Placeholder.vue
app/locales/: .schema.json  index.ts  locales.schema.json  options.ts
app/locales/messages/: en.json  zh.json
app/routes/: docs.vue  error.vue  hello.vue  home.vue  index.ts
app/routes/docs/: index.vue
app/routes/tauri/: error.vue
app/src/: lib.rs  main.rs
app/styles/: button.scss  button.stories.tsx  common.scss  common.stories.tsx  index.scss  themes.scss  variables.scss
code/: Cargo.toml  README.md
code/src/: lib.rs  main.rs  workspace.rs
rules/: architecture.md  comments.md  frameworks.md  git-messages.md  languages.md  rust.md  storybook.md  styles.md  typescript.md  vitest.md
scripts/: copy-rules.test.ts  copy-rules.ts  detect-changes.sh  placeholder.test.ts  postinstall.ts  prepare-rules.ts  utils.sh  utils.ts
