[package]
name = "codecluster_app"
description = "AI-powered code development with multiple threads & repos."
version = "0.0.0"
edition = "2024"

[lib]
name = "codecluster_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
codecluster = { workspace = true, features = [] }
serde = "1.0.228"
serde_json = "1.0.145"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-opener = "2.5.2"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }
