[package]
name = "codecluster"
description = "AI-powered code development with multiple threads & repos."
repository = "https://github.com/codecluster-softwares/codecluster"
license = "Apache-2.0"
version = "0.0.0"
edition = "2024"
keywords = ["ai", "devtools"]

[features]
default = ["server"]
server = ["axum", "tokio"]

[dependencies]
axum = { version = "0.8.6", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
